# scimpler

./: .gitignore  404.html  CODE_OF_CONDUCT.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yaml
api_reference/scimpler_config/: index.html
compliance/: index.html
docs/: about.md  api_reference.md  compliance.md  index.md  users_guide.md
docs/api_reference/: scimpler_config.md
issue-codes/: index.html
search/: search_index.json
src/: attributes.py  attributes_presence.py  container.py  error.py  filter.py  operator.py  patch.py  path.py  query_deserializer.py  query_parser.py  registry.py  request_validator.py  request_validators.py  schemas.py  sorter.py  utils.py  validator.py  wanings.py
src/assets/: config.py  scim_error.py
src/attributes/: attributes.py  common.py  type.py  validators.py
src/data/: attr_presence.py  attributes.py  attributes_presence.py  attrs.py  container.py  filter.py  operator.py  patch_path.py  path.py  registry.py  schemas.py  sorter.py  type.py  utils.py
src/ext/: marshmallow.py
src/filter/: filter.py  operator.py
src/parser/: attributes_presence.py  error.py  schemas.py  sorter.py  utils.py
src/request/: query_deserializer.py  query_handler.py  validator.py
src/resource/: request_validators.py  schemas.py  validators.py
src/schema/: attributes.py  schemas.py
tests/: conftest.py  test_attributes.py  test_attributes_presence.py  test_config.py  test_constants.py  test_container.py  test_error.py  test_filter.py  test_operator.py  test_patch.py  test_path.py  test_query_deserializer.py  test_query_handler.py  test_query_parser.py  test_query_string.py  test_query_string_handler.py  test_registry.py  test_request_validator.py  test_request_validators.py  test_schemas.py  test_sorter.py  test_validator.py
users_guide/: index.html
(+378 files in other folders)
