[tool.poetry]
name = "pyscim"
version = "0.1.0"
description = ""
authors = ["Arkadiusz Pajor <arkadiuszpajor97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
marshmallow = {version = "^3.21.1", optional = true}
precis-i18n = "^1.1.0"
phonenumbers = "^8.13.35"

[tool.poetry.extras]
marshmallow = ["marshmallow"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
black = "^23.10.0"
isort = "^5.12.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"